# rust-jobs

./: .env  .env-template  Cargo.toml  README.md  docker-compose.yaml
configuration/: base.yaml
migrations/: 20230821111814_create_users_table.sql  20230826194451_create_users_table.sql  20230827080925_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  database.rs  domain.rs  email.rs  k8s_probes.rs  lib.rs  main.rs  monitoring.rs  presenters.rs  session_state.rs  signup.rs  startup.rs  static_files.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/handlers/: home.rs  job_details.rs  job_search.rs  mod.rs  shared.rs  signin.rs  signout.rs  signup.rs
src/jobs/: domain.rs  handlers.rs  mod.rs  structs.rs
static/root/css/: style.css  styles.css
templates/: .stpl  head.stpl  home.stpl  job.stpl  login.stpl  navbar.stpl  new_job.stpl  notfound.stpl  signup-rust-dev.stpl  signup.stpl
templates/job/: new_permanent_job.stpl
