[package]
name = "rust-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sailfish = "0.8.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
