[package]
name = "rust-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.26"

actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19.1"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
secrecy = { version = "0.8", features = ["serde"] }
maud = { version = "0.25.0", features = ["actix-web"] }
serde = { version = "1.0.185", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
